# MonolithBot

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.json.example  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
bot/: __init__.py  config.py  main.py
bot/cogs/: __init__.py  announcements.py  health.py  suggestions.py
bot/cogs/jellyfin/: __init__.py  announcements.py  health.py  suggestions.py
bot/cogs/minecraft/: __init__.py  health.py  players.py
bot/services/: __init__.py  jellyfin.py  minecraft.py  scheduler.py
tests/: __init__.py  conftest.py  test_announcements.py  test_config.py  test_health.py  test_jellyfin.py  test_main.py  test_minecraft_cogs.py  test_minecraft_service.py  test_scheduler.py  test_suggestions.py
